force-app/main/default/objects/ssot__GameDefinition__dlm/fields/ssot__ExpirationPeriod__c.field-meta.xml
<CustomField>
    <fullName>ssot__ExpirationPeriod__c</fullName>
    <label>Expiration Period</label>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Standard</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <refAttrDeveloperName>ExpirationPeriod</refAttrDeveloperName>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>