force-app/main/default/objects/ssot__GameDefinition__dlm/fields/ssot__ExpirationPeriodUOMId__c.field-meta.xml
<CustomField>
    <fullName>ssot__ExpirationPeriodUOMId__c</fullName>
    <label>Expiration Period Unit</label>
    <length>15</length>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Standard</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <refAttrDeveloperName>ExpirationPeriodUOMId</refAttrDeveloperName>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <type>Text</type>
</CustomField>