force-app/main/default/objects/ssot__GameDefinition__dlm/fields/ssot__IsGameAssignmentRequired__c.field-meta.xml
<CustomField>
    <fullName>ssot__IsGameAssignmentRequired__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Game Assignment Required</label>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Standard</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <refAttrDeveloperName>IsGameAssignmentRequired</refAttrDeveloperName>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <type>Checkbox</type>
</CustomField>