force-app/main/default/objects/ssot__GameDefinition__dlm/fields/ssot__rel_1729227484019_end__c.field-meta.xml
<CustomField>
    <fullName>ssot__rel_1729227484019_end__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>GameDefinition_ExpirationPeriodUOMId_rel</label>
    <referenceTo>ssot__UnitOfMeasure__dlm</referenceTo>
    <relationshipLabel>GameDefinition_ExpirationPeriodUOMId_rel</relationshipLabel>
    <relationshipName>rel_1729227484019_end</relationshipName>
    <type>Lookup</type>
</CustomField>