force-app/main/default/objects/ssot__GameDefinition__dlm/fields/ssot__TimeoutDurationNumber__c.field-meta.xml
<CustomField>
    <fullName>ssot__TimeoutDurationNumber__c</fullName>
    <label>Timeout Duration</label>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Standard</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <refAttrDeveloperName>TimeoutDurationNumber</refAttrDeveloperName>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>